--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>
     </div>
     <div style="text-align: center;">
-        <button onclick="generate()" type="button" class="btn btn-info">Generate Quote</button>
+        <button style="margin-bottom: 50px;margin-top: -50px;" onclick="generate()" type="button" class="btn btn-info">Generate Quote</button>
     </div>
 
     <script src="script.js"></script>
